--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,6 +8,14 @@
 		android:background="@android:color/black"
         tools:context=".MainActivity">
 
+    <TextView android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
+              android:layout_centerInParent="true"
+              android:textColor="@android:color/white"
+              android:textSize="30sp"
+              android:id="@+id/hint_tw"
+              android:text="Swipe to refresh page"/>
+
     <android.support.v4.widget.SwipeRefreshLayout
             android:id="@+id/swipeRefreshLayout"
             android:layout_width="match_parent"
